@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: datafile.c,v 1.261 2013/08/06 18:22:36 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: datafile.c,v 1.262 2013/08/08 07:01:22 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - datafile.c */
@@ -1785,9 +1785,11 @@ df_readascii(double v[], int max)
 	    for (j=0; j<df_no_cols; j++) {
 		free(df_column[j].header);
 		df_column[j].header = df_parse_string_field(df_column[j].position);
-		if (df_longest_columnhead < strlen(df_column[j].header))
-		    df_longest_columnhead = strlen(df_column[j].header);
-		FPRINTF((stderr,"Col %d: \"%s\"\n",j,df_column[j].header));
+		if (df_column[j].header) {
+		    if (df_longest_columnhead < strlen(df_column[j].header))
+			df_longest_columnhead = strlen(df_column[j].header);
+		    FPRINTF((stderr,"Col %d: \"%s\"\n",j,df_column[j].header));
+		}
 	    }
 	    df_already_got_headers = TRUE;
 
